[package]
name = "fsx-wasix"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
env_logger = "0.11.1"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
log = "0.4.17"
rand = { version = "0.8.5" }
rand_xorshift = "0.3"
ringbuffer = "0.11.0"
serde = "1.0.145"
serde_derive = "1.0.145"
toml = { version = "0.8.11", default-features = false, features = [ "parse" ] }
